# TimeSyncDiag

./: .env.example  .gitignore  PLAN.md  README.md  THICKNESS_MAP_README.md  config.yml  config.yml.example  consumer.py  data_processor.py  db_connection.py  docker-compose.yml  kafka_consumer.py  models.py  producer.py  pyproject.toml  scheduler.py
backend/: README.md  main.py  run.py  state.py
backend/LLMAgent/: MyVLAgent.py  QwenAgent.py  QwenVLAgent.py  sales_data.csv
backend/LLMAgent/KnowledgeDb/: kb.py
backend/config/: config_loader.py  producer_state.json  schemas.py
backend/heatmap/: README.md  creatmap.py
backend/logic/consumers/: base_consumer.py  consumer.py  kafka_consumer.py  thickness_map_consumer.py  thickness_map_pipeline.py
backend/logic/models/: custom_models.py  db_connection.py  mini_connection.py  models.py
backend/logic/processors/: data_processor.py  generic_alignment_processor.py  scheduler.py  thickness_map_processor.py
backend/logic/producers/: producer.py
backend/logic/services/: image_analysis_service.py  remote_template.py
backend/logic/utils/: paths.py
backend/routes/: config.py  consumer.py  custom_analysis.py  image_analysis.py  producer.py  thickness_map.py  thickness_map_ws.py  vl.py
backend/utils/: ProcessDataUtil.py  __init__.py  paths.py
backend/websocket/: thickness_map_ws.py
cnn_image_classification/: README.md  cnn_image_classifier.py  cnnfast.py  download_model.py  download_model.sh  evaluation_results.txt  main.py  predict_image.py  pyproject.toml  random_test.py  requirements.txt
fastapi/: main.py  requirements.txt  run.py  state.py
fastapi/LLMAgent/KnowledgeDb/: LMclient.py  requirements.txt
fastapi/LLMAgent/KnowledgeDb/qdrant_db/: raft_state.json
fastapi/LLMAgent/KnowledgeDb/qdrant_db/collections/my_knowledge_base/0/: newest_clocks.json  replica_state.json
fastapi/LLMAgent/KnowledgeDb/qdrant_db/collections/my_knowledge_base/0/segments/662f8282-7dd0-45c9-92f4-16b2c11ebb79/: mutable_id_tracker.mappings
fastapi/LLMAgent/KnowledgeDb/qdrant_db/collections/my_knowledge_base/0/segments/7d028542-fbb7-4b41-80be-f60f959fec4f/: mutable_id_tracker.mappings
fastapi/LLMAgent/KnowledgeDb/qdrant_db/collections/thickness_map_comments/0/: newest_clocks.json
fastapi/config/: config_loader.py  producer_state.json
fastapi/heatmap/: creatmap.py
fastapi/logic/: config.py  exceptions.py
fastapi/logic/consumers/: consumer.py  thickness_map_pipeline.py
fastapi/logic/models/: db_connection.py  models.py  schemas.py
fastapi/logic/processors/: data_processor.py  thickness_map_processor.py
fastapi/logic/producers/: producer.py
fastapi/logic/services/: remote_template.py
fastapi/logic/utils/: common.py  paths.py
fastapi/routes/: consumer.py  producer.py  qwen_vl.py  thickness_map.py
fastapi/utils/: paths.py
fastapi/websocket/: thickness_map_ws.py
scripts/: import_offline_data.py
tests/: api_smoke_test.py  test_phase1_config_hot_reload.py  test_phase1_kafka_config.py
(+1 files in other folders)
